fix types description overflow

--- a/ClientApp/src/app/areas/measurement/components/measurementTypes/measurementTypes.style.styl
+++ b/ClientApp/src/app/areas/measurement/components/measurementTypes/measurementTypes.style.styl
@@ -29,6 +29,8 @@
             .description
                 margin 0
                 padding 0
+                white-space pre-line
+                word-break break-word
         .type
             margin 0 5px
             width 10%
